# wallpapi

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GETTING_STARTED.txt  LICENSE  README.md  SECURITY.md  SPEC.md  build.ps1  config.toml  config.toml.example  install.ps1  package.ps1  register-startup.ps1  restart-engine.ps1  run-engine.ps1  setup_deps.ps1  test-install.ps1  uninstall.ps1
.github/workflows/: ci-windows.yml  release.yml
cmake/: CTestCustom.cmake.in
docs/: EULA.md  INSTALL.md  THIRD_PARTY_NOTICES.md
shaders/: compat.hlsl  fluid.glsl  fluid_ns.glsl  nebula.glsl  plasma.glsl  test.glsl  wings.glsl
src/: config.cpp  config.hpp  desktop_shell.cpp  desktop_shell.hpp  fps_limiter.hpp  fullscreen_detect.hpp  graphics.cpp  graphics.hpp  ipc.cpp  ipc.hpp  ipc_client.hpp  ipc_commands.hpp  logger.cpp  logger.hpp  lua_engine.cpp  lua_engine.hpp  main.cpp  monitor.cpp  monitor.hpp  mpv_options.hpp  shader_renderer.cpp  shader_renderer.hpp  video_options.hpp  video_player.cpp  wallpaper_ops.hpp  wallpaper_scan.hpp
tests/: main.cpp  test_config.cpp  test_fps_limiter.cpp  test_fullscreen_detect.cpp  test_graphics_reinit_win32.cpp  test_ipc_commands.cpp  test_ipc_integration.cpp  test_mpv_options.cpp  test_wallpaper_scan.cpp
tools/: cli.cpp  select_wallpaper.ps1  ui.cpp
